# pre-commit-tealer

./: .gitignore  .pre-commit-hooks.yaml  setup.cfg
pre_commit_tealer/: __init__.py  tealer.py
