[metadata]
name = pre_commit_tealer
version = 0.0.1
description = Simple pre-commit hook for running Tealer static analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aorumbayev/pre-commit-tealer
author = Altynbek Orumbayev
author_email = aorumbayev@pm.me
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    pydantic
python_requires = >=3.9.0

[options.entry_points]
console_scripts =
    pydantic-to-schema = pre_commit_tealer.tealer:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
